change file name

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Netflix India - Watch TV Shows Online, Watch Movies Online</title>
 
     <!--link css and js-->
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <!--link all font-->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -334,11 +334,11 @@
 
     
       <div class="overlay">  
-        <a href="../part-2/index2.html" class="link">Next Page</a>
+        <a href="./part-2/new.html" class="link">Next Page</a>
       </div>
   
      
-    <script src="./script.js" defer data-deferred="1"></script> 
+    <script src="./part-2/script.js" defer data-deferred="1"></script> 
 
   </body>
 </html>
