--- a/part-2/new.html
+++ b/part-2/new.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix India - Watch TV Shows Online, Watch Movies Online</title>
 
-    <link rel="stylesheet" href="./style2.css">
+    <link rel="stylesheet" href="./new.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
@@ -325,10 +325,10 @@
     </footer>
 
         
-<div class="overlay">  <a href="../part-1/index.html" class="link">
+<div class="overlay">  <a href="../index.html" class="link">
   Back</a></div>
 
-    <script src="../part-1/script.js"></script>
+    <script src="../part-2/script.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
     <script>
       feather.replace();
